test/spec_vectors/simd_i64x2_cmp/fail/module_10.wat
(module (func $i64x2.ne-arg-empty (result v128) (i64x2.ne)))